# jota-transcriber

./: .dockerignore  .env.example  .gitignore  ANALISIS_MODELOS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  REPORTE_DEPENDABOT.md  docker-compose.yml  run_tests.sh  test_ws.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
docs/: pascal-gpu-support.md
docs/plans/: 2026-03-08-correctness-fixes.md  2026-03-08-scalability-design.md
src/: server.cpp
src/audio/: AudioDecoder.cpp  AudioDecoder.h
src/auth/: ApiAuthClient.cpp  ApiAuthClient.h  ApiAuthConfig.h  AuthCache.cpp  AuthCache.h
src/log/: Log.h
src/mqtt/: MQTTPublisher.cpp
src/server/: AuthManager.cpp  AuthManager.h  ConnectionLimiter.cpp  ConnectionLimiter.h  HandshakeWatchdog.h  HttpRouter.cpp  HttpRouter.h  MultipartParser.cpp  MultipartParser.h  ServerConfig.h  SessionHandler.cpp  SessionHandler.h  SessionTracker.h  SocketUtil.h  StreamingSession.h  TrustedProxyResolver.cpp  TrustedProxyResolver.h
src/utils/: AudioPreprocessor.h  HallucinationGuard.h
tests/: CMakeLists.txt  test_streaming_whisper.cpp
tests/unit/: test_audio_decoder.cpp  test_audio_pipeline.cpp  test_connection_limiter.cpp  test_hallucination_guard.cpp  test_handle_transcribe.cpp  test_handshake_watchdog.cpp  test_http_router.cpp  test_inference_limiter.cpp  test_model_cache.cpp  test_multipart_parser.cpp  test_session_handler.cpp  test_socket_util.cpp  test_streaming_session.cpp  test_streaming_whisper_engine.cpp  test_trusted_proxy_resolver.cpp  test_vad_gate.cpp
(+19 files in other folders)
